Versión funcional con base de datos